--- a/src/components/Common/SectionHeader/SectionHeader.module.css
+++ b/src/components/Common/SectionHeader/SectionHeader.module.css
@@ -6,9 +6,8 @@
 }
 
 .highlight {
-  color: #3ba6ff;
-  font-weight: 600;
-  font-style: italic;
+  color:#3193E8;
+  font-weight: 600; 
 }
 .container{
     text-align: center;
